<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="clemons">    Clemons    </string>
    <string name="alderman">   Alderman    </string>
    <string name="thornton">   Thornton    </string>
    <string name="libraryLabel">Library</string>
    <string name="crowdLabel">Crowd Level</string>
    <string name="noiseLabel">Noise Level</string>
    <string name="level">Level</string>
    <string name="crowd">Crowd</string>
    <string name="noise">Noise</string>
    <string name="sectionLabel">Section</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="clark">     Clark     </string>
    <string name="rice">   Rice Hall   </string>
    <string name="wilsdorf">   Wilsdorf    </string>
    <string name="submit">Submit</string>
    <string name="defaultData">No Data</string>
    <string name="makePost">Post Library Report</string>
    <string name="west_wing">West Wing</string>
    <string name="east_wing">East Wing</string>
    <string name="mcgregor">McGregor Room</string>
    <string name="cafe">Cafe</string>
    <string name="stacks">Stacks</string>
    <string name="floor_one">1st Floor</string>
    <string name="floor_two">2nd Floor</string>
    <string name="floor_three">3rd Floor</string>
    <string name="floor_four">4th Floor</string>
    <string name="floor_five">5th Floor</string>
    <string name="reading_room">Reading Room</string>
    <string name="commerce">Commerce School</string>
    <string name="comNewLine">Comm School</string>
    <string name="computer_lab">Computer Lab</string>
    <string name="main_title">Crowd and Noise Statistics</string>
    <string name="exception">*No recent data - daily trend shown instead</string>
    <string name="clemons1">Floor 1</string>
    <string name="clemons2">Floor 2</string>
    <string name="clemons3">Floor 3</string>
    <string name="clemons4">Floor 4</string>
    <string name="aldermanWest">West Wing</string>
    <string name="aldermanEast">East Wing</string>
    <string name="aldermanMcGregor">McGregor</string>
    <string name="aldermanCafe">Cafe</string>
    <string name="thorntonStacks">Stacks</string>
    <string name="clarkWest">West Wing</string>
    <string name="clarkEast">East Wing</string>
    <string name="clarkReading">Reading</string>
    <string name="clarkStacks">Stacks</string>
    <string name="commerceCompLab">Computer Lab</string>
    <string name="commerce4">Floor 4</string>
    <string name="rice1">Floor 1</string>
    <string name="rice2">Floor 2</string>
    <string name="rice3">Floor 3</string>
    <string name="rice4">Floor 4</string>
    <string name="rice5">Floor 5</string>
    <string name="wilsdorfCafe">Cafe</string>
    <string name="url_rice">Rice</string>
    <string name="url_west_wing">WestWing</string>
    <string name="url_east_wing">EastWing</string>
    <string name="url_computer_lab">CompLab</string>
    <string name="studySearch">Search for A Study Group</string>
    <string name="submitStudyGroup">Create a New Study Group</string>
    <string name="searchHere">Search for a Study Group&#8230; </string>
    <string name="postHere">Create a New Study Group&#8230; </string>
    <string name="coursePrompt">Choose a course subject</string>
    <string name="courseSuggestion">(i.e. 4720)</string>
    <string name="emptyResults">No Current \nStudy Groups</string>

    <string-array name="course_array">
        <item>APMA</item>
        <item>ANTH</item>
        <item>ASTR</item>
        <item>BIOL</item>
        <item>BME</item>
        <item>CE</item>
        <item>CHE</item>
        <item>CHEM</item>
        <item>CS</item>
        <item>ECE</item>
        <item>ECON</item>
        <item>EVSC</item>
        <item>MAE</item>
        <item>MATH</item>
        <item>MSE</item>
        <item>PHIL</item>
        <item>PHYS</item>
        <item>PSYC</item>
        <item>STAT</item>
        <item>STS</item>
        <item>SYS</item>
    </string-array>
    <string-array name="library_array">
        <item>Alderman</item>
        <item>Clark</item>
        <item>Clemons</item>
        <item>Commerce School</item>
        <item>Rice Hall</item>
        <item>Thornton</item>
        <item>Wilsdorf</item>
    </string-array>
    <string-array name="alderman_section_array">
        <item>West Wing</item>
        <item>East Wing</item>
        <item>McGregor Room</item>
        <item>Cafe</item>
    </string-array>
    <string-array name="clark_section_array">
        <item>West Wing</item>
        <item>East Wing</item>
        <item>Reading Room</item>
        <item>Stacks</item>
    </string-array>
    <string-array name="clemons_section_array">
        <item>1st Floor</item>
        <item>2nd Floor</item>
        <item>3rd Floor</item>
        <item>4th Floor</item>
    </string-array>
    <string-array name="commerce_section_array">
        <item>4th Floor</item>
        <item>Computer Lab</item>
    </string-array>
    <string-array name="rice_section_array">
        <item>1st Floor</item>
        <item>2nd Floor</item>
        <item>3rd Floor</item>
        <item>4th Floor</item>
        <item>5th Floor</item>
    </string-array>
    <string-array name="thornton_section_array">
        <item>Stacks</item>
    </string-array>
    <string-array name="wilsdorf_section_array">
        <item>Cafe</item>
    </string-array>

    <string name="numPrompt">Enter a course number: </string>
    <string name="startTime">Study group start time: </string>
    <string name="endTime">Study group end time: </string>
    <string name="startTimePicker">Choose a start time: </string>
    <string name="endTimePicker">Choose an end time: </string>
    <string name="chooseLibraryPrompt">Choose a Library</string>
    <string name="chooseSectionPrompt">Choose a Section</string>
    <string name="namePrompt">Enter Your Name (optional)</string>
    <string name="descriptionPrompt">Describe Your Study Group (optional)</string>
    <string name="nameSuggestion">(i.e. Sam D.)</string>
    <string name="descriptionSuggestion"></string>
    <string name="title_library">Library</string>
    <string name="title_section">Section</string>
    <string name="title_department">Department</string>
    <string name="title_course">Course</string>
    <string name="title_course_num">Course Number</string>
    <string name="title_name">Name</string>
    <string name="title_description">Description</string>
    <string name="pickerText">▼</string>
    <string name="home">Home</string>
    <string name="time_description">End Time</string>
    <string name="study_time_message">Study Group Time:</string>

</resources>