<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/searchRowTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/libraryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title_library"
        android:textSize="22sp" />
    
    <TextView
        android:id="@+id/sectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_section"
        android:layout_margin="10dp"
        android:textSize="22sp" />
        
    <TextView
        android:id="@+id/departmentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_course"
        android:layout_margin="10dp"
        android:textSize="22sp" />
    
    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:layout_margin="10dp"
        android:textSize="22sp" />
    
     <TextView
         android:id="@+id/descriptionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/title_description"
         android:textSize="22sp" />
    
</TableRow>
