<?xml version="1.0" encoding="utf-8"?>
   <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/sectionRadioGroup"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" >

	       <RadioButton
	           android:id="@+id/sectionRadioWest"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:checked="true"
	           android:text="@string/west_wing" />

	       <RadioButton
	           android:id="@+id/sectionRadioEast"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/east_wing" />

	       <RadioButton
	           android:id="@+id/sectionRadioMcGregor"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/mcgregor" />

	       <RadioButton
	           android:id="@+id/sectionRadioCafe"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/cafe" />
      
  </RadioGroup>