<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ChooseLibraryEditText"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudySearchActivity" >

    <Button
        android:id="@+id/submitPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitStudyGroup" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchHere"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coursePrompt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinnerCourse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/course_array"
            android:prompt="@string/coursePrompt" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numPrompt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/coursePrompt"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </TableRow>

   <!--  <TimePicker android:id="@+id/timePickerStart" />
    <TimePicker android:id="@+id/timePickerEnd" />
 -->
    <Button
        android:id="@+id/submitSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchTable" >

    </TableLayout>

</TableLayout>